# CloneGram

./: .dockerignore  .env.example  .env.exemple  .gitignore  Dockerfile  README-ptbr.md  README.md  docker-compose.yml  main.py  pyproject.toml
bot/: main.py  progress_tracker.py  rate_limit.py  safety.py  settings.py  utils.py
